fixing alignments and validation

--- a/src/Components/Home/View/MovieItem/MovieItem.scss
+++ b/src/Components/Home/View/MovieItem/MovieItem.scss
@@ -21,7 +21,6 @@
 
         .movie-item-info {
             margin-left: 10px;
-            // border-left: 1px solid var(--red);
             display: flex;
             width: 100%;
             justify-content: space-between;
@@ -55,6 +54,7 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: space-evenly;
+                width: 200px;
 
                 .movie-item-info-container {
                     display: flex;
